# DepthEstimation

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  experiment_2.yaml  local_debug.yaml
data/splits/eigen_curated/: test_files.txt  train_files.txt  val_files.txt
depth/: __init__.py
depth/datasets/: __init__.py  kitti_dataset.py  transforms.py
depth/export/: __init__.py  coreml_export.py
depth/geometry/: __init__.py  projection.py  warping.py
depth/losses/: __init__.py  masking.py  photometric.py  smoothness.py
depth/models/: __init__.py  depth_decoder.py  pose_decoder.py  resnet_encoder.py
depth/utils/: __init__.py  device.py  kitti_utils.py
scripts/: compile_gif.py  download_kitti.py  evaluate.py  train.py  verify_mps.py  visualize_depth.py
tests/: __init__.py  test_dataloader.py  test_forward_pass.py  test_warping.py
